<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyCarImage"
    android:background="#D8D7D7">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView_timer"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


        <ImageView
            android:id="@+id/imageView_car_one"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/first_picture_of_a_car"
            app:srcCompat="@drawable/bentley" />

        <ImageView
            android:id="@+id/imageView_car_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/second_picture_of_a_car"
            app:srcCompat="@drawable/audi" />

        <ImageView
            android:id="@+id/imageView_car_three"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/third_picture_of_a_car"
            app:srcCompat="@drawable/bmw" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_car_brand"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:textSize="18dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_car_brand" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_next"
        app:layout_constraintVertical_bias="0.145"
        android:textSize="18dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="18dp"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>